@@ -1,3 +1,8 @@
+Wed Sep 09 07:08:04 GMT 2015  Olly Betts <olly@survex.com>
+
+	* buildmacosx.sh: Fix locations proj 'epsg' and 'esri' files get
+	  installed to (script version used to build 1.2.23).
+
 Sun Sep 06 04:25:13 GMT 2015  Olly Betts <olly@survex.com>
 
 	* src/cavernlog.cc: Fix compiler warnings.
